Package_Tools/include-C/hdf5/serial/c/in_arbeit/h/H5public.h

#define MPICH_SKIP_MPICXX 1
#define OMPI_SKIP_MPICXX 1
#define H5_VERS_MAJOR 1
#define H5_VERS_MINOR 10
#define H5_VERS_RELEASE 10
#define H5_VERS_SUBRELEASE ""
#define H5_VERS_INFO "HDF5 library version: 1.10.10"
typedef int herr_t;
typedef bool hbool_t;
typedef enum {
    H5_ITER_UNKNOWN = -1, 
    H5_ITER_INC,          
    H5_ITER_DEC,          
    H5_ITER_NATIVE,       
    H5_ITER_N             
} H5_iter_order_t;
#define H5_ITER_ERROR (-1) 
#define H5_ITER_CONT  (0)  
#define H5_ITER_STOP  (1)  
typedef enum H5_index_t {
    H5_INDEX_UNKNOWN = -1, 
    H5_INDEX_NAME,         
    H5_INDEX_CRT_ORDER,    
    H5_INDEX_N             
} H5_index_t;
typedef struct H5_alloc_stats_t {
    unsigned long long total_alloc_bytes;        
    size_t             curr_alloc_bytes;         
    size_t             peak_alloc_bytes;         
    size_t             max_block_size;           
    size_t             total_alloc_blocks_count; 
    size_t             curr_alloc_blocks_count;  
    size_t             peak_alloc_blocks_count;  
} H5_alloc_stats_t;
extern herr_t H5open(void);
extern herr_t H5close(void);
extern herr_t H5dont_atexit(void);
extern herr_t H5garbage_collect(void);
extern herr_t H5set_free_list_limits(int reg_global_lim, int reg_list_lim, int arr_global_lim,
                                     int arr_list_lim, int blk_global_lim, int blk_list_lim);
extern herr_t H5get_free_list_sizes(size_t *reg_size, size_t *arr_size, size_t *blk_size, size_t *fac_size);
extern herr_t H5get_alloc_stats(H5_alloc_stats_t *stats);
extern herr_t H5get_libversion(unsigned *majnum, unsigned *minnum, unsigned *relnum);
extern herr_t H5check_version(unsigned majnum, unsigned minnum, unsigned relnum);
extern herr_t H5is_library_threadsafe(hbool_t *is_ts);
extern herr_t H5free_memory(void *mem);
extern void *H5allocate_memory(size_t size, hbool_t clear);
extern void *H5resize_memory(void *mem, size_t size);